syntax = "proto3";
option java_multiple_files = true;
package mentoring.ratingservice.grpcgateway;
import "google/protobuf/wrappers.proto";

message RateRequest {
  int64 employeeId = 1;
  int64 courseId = 2;
  int32 stars = 3;
}

message RateResponse {
  string id = 1;
  int64 employeeId = 2;
  int64 courseId = 3;
  int32 stars = 4;
}

service RatingService {
  rpc createRating(RateRequest) returns (RateResponse);
}
